crates/forge_app/src/snapshots/forge_app__command_generator__tests__generate_simple_command.snap
---
source: crates/forge_app/src/command_generator.rs
expression: captured_context
---
messages:
  - text:
      role: System
      content: "Generate a command for: [[object], [object]]\n"
  - text:
      role: User
      content: "<task>list all files</task>"
      model: test-model
response_format:
  json_schema:
    $schema: "https://json-schema.org/draft/2020-12/schema"
    title: shell_command
    description: Response struct for shell command generation using JSON format
    type: object
    properties:
      command:
        description: The generated shell command
        type: string
    required:
      - command
